# kitchen-ops-env

./: .env.example  .gitignore  .hfignore  DATA_SOURCES.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
kitchen_ops_env/: __init__.py  client.py  models.py  scenario_generator.py
kitchen_ops_env/data/: __init__.py  ingredients.json  recipes.json  scenarios.json
kitchen_ops_env/server/: __init__.py  app.py  kitchen_environment.py
server/: __init__.py  app.py
tests/: test_environment.py  test_inference_imports.py
